pak di edit pak

--- a/itw2023_233040054/latihan/latihan1/T1233040054.html
+++ b/itw2023_233040054/latihan/latihan1/T1233040054.html
@@ -2,11 +2,6 @@
     <head>
         <title>ini judul</title>
     </head>
-    <style>
-        h4 {
-            text-decoration: underline;
-        }
-    </style>
 
     <body>
         <h1 align="center">CURICULUM VITAE</h1>
@@ -19,126 +14,32 @@
         No telepon :...<br>
         email: <a href="email">email</a>
 
-        <h4>DESKERIPSI</h4>
+        <h4><u>DESKERIPSI</u></h4>
         saya ...... 
 
-        <h4>PENDIDIKAN</h4>
+        <h4><u>PENDIDIKAN</u></h4>
         <ul>
             <li>SD : SD....
             <li>SMP : SMP....
             <li>SMA : SMA....
         </ul> 
         
-        <h4>SEMINAR/WORKSHOP</h4>
+        <h4><u>SEMINAR/WORKSHOP</u></h4>
             <ol>
                 <li>seminar
                 <li>seminar
                 <li>workshop
-                <li>seminar
-                <li>seminar
-                <li>workshop
-                <li>seminar
-                <li>seminar
-                <li>workshop
-                <li>seminar
-                <li>seminar
-                <li>workshop
-                <li>seminar
-                <li>seminar
-                <li>workshop
-                <li>seminar
-                <li>seminar
-                <li>workshop
-                <li>seminar
-                <li>seminar
-                <li>workshop
-                <li>seminar
-                        <li>seminar
-                        <li>workshop
-                        <li>seminar
-                        <li>seminar
-                        <li>workshop
-                        <li>seminar
-                        <li>seminar
-                        <li>workshop
-                        <li>seminar
-                        <li>seminar
-                        <li>workshop
-                        <li>seminar
-                        <li>seminar
-                        <li>workshop
-                        <li>seminar
-                        <li>seminar
-                        <li>workshop
-                        <li>seminar
-                        <li>seminar
-                        <li>workshop
-                            <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                <li>seminar
-                                <li>workshop
-                                <li>seminar
-                                        <li>seminar
-                                        <li>workshop
-                                        <li>seminar
-                                        <li>seminar
-                                        <li>workshop
-                                        <li>seminar
-                                        <li>seminar
-                                        <li>workshop
-                                        <li>seminar
-                                        <li>seminar
-                                        <li>workshop
-                                        <li>seminar
-                                        <li>seminar
-                                        <li>workshop
-                                        <li>seminar
-                                        <li>seminar
-                                        <li>workshop
-                                        <li>seminar
-                                        <li>seminar
-                                        <li>workshop  
-                                            <li>seminar
-                                                <li>workshop
-                                                <li>seminar
-                                                <li>seminar
-                                                <li>workshop
-                                                <li>seminar
-                                                <li>seminar
-                                                <li>workshop
-                                                <li>seminar
-                                                <li>seminar
-                                                <li>workshop
-                                                <li>seminar
-                                                <li>seminar
-                                                <li>workshop
-                                                <li>seminar
-                                                <li>sebenernya si masih banyak hehehe,tapi 100 dulu ajah ya:)
+                    <br>
+                    ......
+            </ol>    
+            100. sebenernya masih banyak, tapi sampai 100 ajah ya:)    
 
-
-<h4>PELATIHAN</h4> 
+<h4><u>PELATIHAN</u></h4> 
 <ol>
     <li>pelatihan
 </ol>       
 
-<h4>BAHASA PEMOGRAMAN</h4>
+<h4><u>BAHASA PEMOGRAMAN</u></h4>
 <ul>
     <li>C/C++</li>
     <li>JAVA</li>
