--- a/itw2023_233040054/latihan/latihan3/L3a233040054.html
+++ b/itw2023_233040054/latihan/latihan3/L3a233040054.html
@@ -6,6 +6,7 @@
 		div{
 			font-family: georgia;
 			text-align: justify;
+			background-color: aqua;
 		}
 		h1{
 			font-family: "Comic Sans MS";
@@ -16,6 +17,7 @@
 			text-align: right;
 			font-style: italic;
 		}
+
 	</style>
 	
 </head>
