--- a/itw2023_233040054/latihan/latihan3/L3a233040054.html
+++ b/itw2023_233040054/latihan/latihan3/L3a233040054.html
@@ -6,7 +6,6 @@
 		div{
 			font-family: georgia;
 			text-align: justify;
-			background-color: aqua;
 		}
 		h1{
 			font-family: "Comic Sans MS";
@@ -21,7 +20,7 @@
 	</style>
 	
 </head>
-<body>
+<body style=" background-color: aqua;">
 
 <div>
 	<h1>Facebook</h1>
