--- a/itw2023_233040054/latihan/latihan2/L2c233040054.html
+++ b/itw2023_233040054/latihan/latihan2/L2c233040054.html
@@ -79,7 +79,7 @@
             <tr>
                 <td  align="center">Volleyball 
                     <br><img src="Voli.jpg" width="100px" alt="Voli"></td>
-                <td  align="center">music 
+                <td  align="center">Music 
                     <br><img src="musik.jpg" width="100px" height="115" alt="Voli"></td>
                 <td  align="center">Dance 
                     <br><img src="nari.jpg" width="100px" alt="Voli"></td>
