--- a/itw2023_233040054/latihan/latihan2/L2b233040054.html
+++ b/itw2023_233040054/latihan/latihan2/L2b233040054.html
@@ -72,11 +72,11 @@
             <td colspan="1">
                 <select>
                     <option name="Agama" selected>--Pilih Agama--</option>
-                    <option value="Sepeda">Islam</option>
-                    <option value="motor">Kristen</option>
-                    <option value="mobil">Hindu</option>
-                    <option value="mobil">Budha</option>
-                    <option value="Pesawat terbang">Konghucu</option>
+                    <option value="islam">Islam</option>
+                    <option value="Kristen">Kristen</option>
+                    <option value="Hindu">Hindu</option>
+                    <option value="Budha">Budha</option>
+                    <option value="Konghucu">Konghucu</option>
                 </select>
             </td>
            </tr>
