--- a/itw2023_233040054/latihan/latihan4/T4a233040054.html
+++ b/itw2023_233040054/latihan/latihan4/T4a233040054.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>latihan box model</title>
+    <link rel="stylesheet" href="T4a233040054.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h1 class="judul">My Website</h1>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">products</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+        <div class="hero"></div>
+        <div class="content">
+            <h2>Judul Artikel</h2>
+            <p class="penulis">ditulis oleh <a href="#">Emmir Fahrezi</a>. pada 18 oktober 2023</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, necessitatibus velit non aut ipsa voluptatibus soluta similique, iste amet sunt vero. Aspernatur distinctio inventore blanditiis, quae cumque perspiciatis repellendus odio?</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati eveniet doloribus minus nulla animi ullam corrupti ducimus suscipit ratione consectetur molestias praesentium iusto, non laborum harum omnis est. Nobis, illo saepe. Ad, incidunt. Quidem porro tenetur asperiores in eaque sit corrupti cumque incidunt ducimus dicta? Praesentium, aliquid provident. Fugit distinctio culpa magni magnam facere, ducimus sit dolorum rerum consequatur nostrum. Possimus atque itaque molestias sunt id, vero consequatur quae fugit rem ratione soluta eius cupiditate dolore ab est impedit, voluptatibus ducimus neque laboriosam ipsam quam, nulla eaque perferendis optio. Laborum minima nulla quos illo, quasi eos dolorum sequi iste nesciunt.</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ducimus nostrum aspernatur, harum qui reiciendis consectetur cumque asperiores, exercitationem aut voluptatum enim ab quasi dignissimos. Nam possimus similique fugiat dolorum tenetur, ex aut excepturi porro sequi. Debitis qui hic quibusdam magnam odit labore porro voluptates ipsam id quaerat quisquam voluptate, nobis recusandae quae numquam suscipit aliquid laudantium natus accusamus corporis. Magni magnam quaerat ex velit sint atque recusandae. Nulla neque alias aut possimus iure consequatur eum, natus a nobis eaque.</p>
+        </div>
+        <div class="footer">
+            <p class="copy">Copyright 2023. Emmir Fahrezi</p>
+
+        </div>
+    </div>
 </body>
 </html>
