--- a/itw2023_233040054/latihan/latihan4/T4b233040054.html
+++ b/itw2023_233040054/latihan/latihan4/T4b233040054.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MY WEBSITE</title>
+    <title>EMMIR WEB</title>
     <link rel="stylesheet" href="T4b233040054.css">
 </head>
 <body>
