--- a/itw2023_233040054/latihan/latihan5/websaya.html
+++ b/itw2023_233040054/latihan/latihan5/websaya.html
@@ -45,44 +45,44 @@
             <div class="container2">
                 <ul class="gallery2">
                     <li>
-                        <a href="#gambar2">
+                        <a href="#gambar-2">
                             <img src="galery/img/thumbs/Voli.jpg" alt="voli">
                             <span>VOLI</span>
                         </a>
 
-                        <div class="overlay2" id="gambar2">
+                        <div class="overlay2" id="gambar-2">
                             <a href="#" class="close">x</a>
-                            <a href="" class="prev">previous</a>
+                            <a href=gambar-4" class="prev">previous</a>
                             <img src="galery/img/full/Volifull.jpg" alt="voli">
-                            <a href="" class="next">next</a>
+                            <a href="gambar-3" class="next">next</a>
 
                         </div>
                     </li>
                     <li>
-                        <a href="#gambar3">
+                        <a href="#gambar-3">
                             <img src="galery/img/thumbs/nari.jpg" alt="Nari">
                             <span>NARI</span>
                         </a>
 
-                        <div class="overlay2" id="gambar3">
+                        <div class="overlay2" id="gambar-3">
                             <a href="#" class="close">x</a>
-                            <a href="" class="prev">previous</a>
+                            <a href="gambar-2" class="prev">previous</a>
                             <img src="galery/img/full/narifull.jpg" alt="nari">
-                            <a href="" class="next">next</a>
+                            <a href="gambar-4" class="next">next</a>
 
                         </div>
                     </li>
                     <li>
-                        <a href="#gambar4">
+                        <a href="#gambar-4">
                             <img src="galery/img/thumbs/musik.jpg" alt="MUSIK">
                             <span>MUSIK</span>
                         </a>
 
-                        <div class="overlay2" id="gambar4">
+                        <div class="overlay2" id="gambar-4">
                             <a href="#" class="close">x</a>
-                            <a href="" class="prev">previous</a>
+                            <a href="gambar-3" class="prev">previous</a>
                             <img src="galery/img/full/musikfull.jpg" alt="musik">
-                            <a href="" class="next">next</a>
+                            <a href="gambar-2" class="next">next</a>
 
                         </div>
                     </li>
@@ -90,8 +90,64 @@
                 </ul>
             </div>
             <h3 class="h32">
-                RIWAYAT SAYA
+                MY GALLERY
             </h3>
+            <div class="gallery0">
+                <div class="image-container">
+                    <img src="galery/img/foto1.jpg" alt="foto1">
+                    <p>foto 1</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto2.jpg" alt="foto2">
+                    <p>foto 2</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto3.jpg" alt="foto3">
+                    <p>foto 3</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto4.jpg" alt="foto4">
+                    <p>foto 4</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto5.jpg" alt="foto5">
+                    <p>foto 5</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto6.jpg" alt="foto6">
+                    <p>foto 6</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto7.jpg" alt="foto7">
+                    <p>foto 7</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto8.jpg" alt="foto8">
+                    <p>foto 8</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto9.jpg" alt="foto9">
+                    <p>foto 9</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto10.jpg" alt="foto10">
+                    <p>foto 10</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto11.jpg" alt="foto11">
+                    <p>foto 11</p>
+                </div>
+                <div class="image-container">
+                    <img src="galery/img/foto12.jpg" alt="foto12">
+                    <p>foto 12</p>
+                </div>
+            </div>
           </div>
-</body>
+          <br>
+
+          <!--footer  -->
+          <div class="footer">
+              <p class="copy">Copyright 2023. Emmir Fahrezi</p>
+          </div>
+        </body>
 </html>
