--- a/itw2023_233040054/latihan/latihan5/websaya.html
+++ b/itw2023_233040054/latihan/latihan5/websaya.html
@@ -52,9 +52,9 @@
 
                         <div class="overlay2" id="gambar-2">
                             <a href="#" class="close">x</a>
-                            <a href=gambar-4" class="prev">previous</a>
+                            <a href=#gambar-4" class="prev">previous</a>
                             <img src="galery/img/full/Volifull.jpg" alt="voli">
-                            <a href="gambar-3" class="next">next</a>
+                            <a href="#gambar-3" class="next">next</a>
 
                         </div>
                     </li>
@@ -66,9 +66,9 @@
 
                         <div class="overlay2" id="gambar-3">
                             <a href="#" class="close">x</a>
-                            <a href="gambar-2" class="prev">previous</a>
+                            <a href="#gambar-2" class="prev">previous</a>
                             <img src="galery/img/full/narifull.jpg" alt="nari">
-                            <a href="gambar-4" class="next">next</a>
+                            <a href="#gambar-4" class="next">next</a>
 
                         </div>
                     </li>
@@ -80,9 +80,9 @@
 
                         <div class="overlay2" id="gambar-4">
                             <a href="#" class="close">x</a>
-                            <a href="gambar-3" class="prev">previous</a>
+                            <a href="#gambar-3" class="prev">previous</a>
                             <img src="galery/img/full/musikfull.jpg" alt="musik">
-                            <a href="gambar-2" class="next">next</a>
+                            <a href="#gambar-2" class="next">next</a>
 
                         </div>
                     </li>
