--- a/itw2023_233040054/latihan/latihan4/T4b233040054.html
+++ b/itw2023_233040054/latihan/latihan4/T4b233040054.html
@@ -1,75 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EMMIR WEB</title>
-    <link rel="stylesheet" href="T4b233040054.css">
-</head>
-<body>
+    <link rel="stylesheet" href="T4b233040054.css" />
+  </head>
+  <body>
     <!--NAVBAR MULAI  -->
     <div class="container">
-        <div class="header">
-            <h1 class="judul">ERGZI HOUSE</h1>
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">abouut</a></li>
-                <li><a href="#">products</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">contact</a></li>
-            </ul>
+      <div class="header">
+        <h1 class="judul">ERGZI HOUSE</h1>
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">abouut</a></li>
+          <li><a href="#">products</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">contact</a></li>
+        </ul>
+      </div>
+      <!-- NAVBAR SELESAI -->
+      <!-- CONTENT MULAI -->
+      <div class="hero"></div>
+      <div class="content">
+        <h2>SPORTCAR VS SUPERCAR VS HYPERCAR</h2>
+        <p class="penulis">
+          ditulis oleh <a href="#">Emmir Fahrezi</a>. pada 20 oktober 2023
+        </p>
+
+        <h3>SPORTCAR</h3>
+
+        <p class="text">
+          Yang terlintas di dalam pikiran kita bahwa mobil sport itu mobil yang
+          didesign seperti mobil balap, dan mungkin di peruntukan untuk berada
+          di track trcak balap seperti sirkuit dan sebagainya. Namun dizaman
+          sekarang mobil sport sudah banyak digunakan masyarakat masyarakat
+          untuk kebutuha sehari sehari, namun juga bisa di bawa kebut kebutan
+          atau dibawa untuk balap. <br />Sportcar merupakan mobil yang diberi
+          kelengkapan dan kemampuan untuk balapan, terutama kendaraan dua atau
+          empat penumpang yang berbentuk aerodinamis, memiliki pusat gravitasi
+          rendah, serta kemudi dan suspensi yang dirancang untuk pengendalian
+          yang presisi pada kecepatan tinggi. <br />Jenis kendaraan sportcar
+          merupakan mobil track ringan yang bisa berupa hot hatchback modern,
+          grand touring coupe bermesin menengah, sedan atau convertibel berkursi
+          dua. Dari sisi tenaga, sportcar punya output daya kuda yang lebih
+          besar dari mobil biasa, tapi masih cukup jinak untuk dikendalikan,
+          yaitu sekitar 250 hingga 400-an HP. Sebagian besar mobil sport
+          menggunakan penggerak roda belakang dengan mesin terletak di depan
+          mobil (tata letak FR) atau di tengah mobil (tata letak MR).
+          <br />Beberapa contoh mobil sport yang terkenal adalah Audi TT, BMW
+          i8, Mazda MX-5, Porsche 911, Nissan GT-R, Nissan Skyline GT-R, Toyota
+          Supra, Lexus LC, Chevrolet Corvette, Ford Mustang, Honda NSX dan lain
+          sebagainya. Semua mobil tersebut dirancang untuk performa yang dinamis
+          dan tampilan stylist, namun tetap memiliki unsur kenyamanan
+        </p>
+        <div class="img1">
+          <img class="mobilsport" src="mobilsport.jpg" alt="mobilsport" />
         </div>
-        <!-- NAVBAR SELESAI -->
-        <!-- CONTENT MULAI -->
-        <div class="hero"></div>
-        <div class="content">
-            <h2>SPORTCAR VS SUPERCAR VS HYPERCAR</h2>
-            <P class="penulis">ditulis oleh <a href="#">Emmir Fahrezi</a>. pada 20 oktober 2023</P>
 
-          <h3>SPORTCAR</h3>
+        <h3>SUPERCAR</h3>
 
-          <p class="text">Yang terlintas di dalam pikiran kita bahwa mobil sport itu mobil yang didesign seperti  mobil balap, dan mungkin di peruntukan untuk berada di track trcak balap seperti sirkuit dan sebagainya. Namun dizaman sekarang mobil sport sudah banyak digunakan masyarakat masyarakat untuk kebutuha sehari sehari, namun juga bisa di bawa kebut kebutan atau dibawa untuk balap.
-            <br>Sportcar merupakan mobil yang diberi kelengkapan dan kemampuan untuk balapan, terutama kendaraan dua atau empat penumpang yang berbentuk aerodinamis, memiliki pusat gravitasi rendah, serta kemudi dan suspensi yang dirancang untuk pengendalian yang presisi pada kecepatan tinggi.
-            <br>Jenis kendaraan sportcar merupakan mobil track ringan yang bisa berupa hot hatchback modern, grand touring coupe bermesin menengah, sedan atau convertibel berkursi dua. Dari sisi tenaga, sportcar punya output daya kuda yang lebih besar dari mobil biasa, tapi masih cukup jinak untuk dikendalikan, yaitu sekitar 250 hingga 400-an HP. Sebagian besar mobil sport menggunakan penggerak roda belakang dengan mesin terletak di depan mobil (tata letak FR) atau di tengah mobil (tata letak MR).
-            <br>Beberapa contoh mobil sport yang terkenal adalah Audi TT, BMW i8, Mazda MX-5, Porsche 911, Nissan GT-R, Nissan Skyline GT-R, Toyota Supra, Lexus LC, Chevrolet Corvette, Ford Mustang, Honda NSX dan lain sebagainya. Semua mobil tersebut dirancang untuk performa yang dinamis dan tampilan stylist, namun tetap memiliki unsur kenyamanan
-          </p>
-          <div class="img1">
-          <img class="mobilsport" src="mobilsport.jpg" alt="mobilsport">
+        <p class="text">
+          Supercar berada satu level di atas Sportcar. Mobil super punya
+          tampilan lebih dramatis sebagai kendaraan bertenaga besar, sehingga
+          memberikan prestise lebih besar. Supercar juga sering disebut mobil
+          eksotis, karena merupakan mainan orang-orang yang benar-benar kaya.
+          <br />Meskipun supercar merupakan mobil yang legal untuk jalan raya,
+          itu bukanlah mobil yang umum dijadikan kendaraan sehari-hari. Karena
+          tenaga buas, suara yang melengking dan diperlukan keahlian yang tidak
+          sembarangan untuk mengemudikannya. Supercar adalah mobil untuk
+          bermain-main dengan kecepatan, sekaligus untuk mempertontonkan
+          kemampuan finansial yang luar biasa bagi pemiliknya. <br />Supercar
+          lebih sulit untuk dikemudikan dibanding sportcar, karena biasanya
+          memiliki output 500 hingga 800 tenaga kuda dan dengan harga lebih
+          mahal dari sportcar. Kebanyakan mesin supercar terletak di tengah atau
+          di belakang kabin pengemudi dengan penggerak roda belakang atau All
+          Wheel Drive. Untuk transmisi, hampir semua menggunakan Direct Shift
+          Gearbox (DSG) dan paddle shifter untuk meningkatkan performa selama
+          mengemudi. Supercar cenderung menggunakan desain dengan pendekatan
+          aerodinamis dan teknologi mesin paling mutakhir. Styling dan performa
+          meniadi fokus untuk memikat pelanggan. Namun biasanya tidak
+          <br />Beberapa supercar terkenal adalah Ferrari 488 GTB, Ferrari 488
+          Pista, Lamborghini Aventador, Lamborghini Huracan, McLaren 650S,
+          McLaren 720S, Corvette C7 Z06, dan masih banyak lagi.
+        </p>
+
+        <div class="img1">
+          <img class="mobilsport" src="supercar.jpg" alt="mobilsuper" />
         </div>
 
-          <h3>SUPERCAR</h3>
+        <h3>HYPERCAR</h3>
 
-          <p class="text">
-            Supercar berada satu level di atas Sportcar. Mobil super punya tampilan lebih dramatis sebagai kendaraan bertenaga besar, sehingga memberikan prestise lebih besar. Supercar juga sering disebut mobil eksotis, karena merupakan mainan orang-orang yang benar-benar kaya.
-            <br>Meskipun supercar merupakan mobil yang legal untuk jalan raya, itu bukanlah mobil yang umum dijadikan kendaraan sehari-hari. Karena tenaga buas, suara yang melengking dan diperlukan keahlian yang tidak sembarangan untuk mengemudikannya. Supercar adalah mobil untuk bermain-main dengan kecepatan, sekaligus untuk mempertontonkan kemampuan finansial yang luar biasa bagi pemiliknya.
-            <br>Supercar lebih sulit untuk dikemudikan dibanding sportcar, karena biasanya memiliki output 500 hingga 800 tenaga kuda dan dengan harga lebih mahal dari sportcar. Kebanyakan mesin supercar terletak di tengah atau di belakang kabin pengemudi dengan penggerak roda belakang atau All Wheel Drive. Untuk transmisi, hampir semua menggunakan Direct Shift Gearbox (DSG) dan paddle shifter untuk meningkatkan performa selama mengemudi. Supercar cenderung menggunakan desain dengan pendekatan aerodinamis dan teknologi mesin paling mutakhir. Styling dan performa meniadi fokus untuk memikat pelanggan. Namun biasanya tidak
-            <br>Beberapa supercar terkenal adalah Ferrari 488 GTB, Ferrari 488 Pista, Lamborghini Aventador, Lamborghini Huracan, McLaren 650S, McLaren 720S, Corvette C7 Z06, dan masih banyak lagi.
-          </p>
+        <p class="text">
+          Dari sebutan hyper, jelas berarti ini adalah jenis mobil yang lebih
+          tinggi dari supercar. Hypercar adalah kasta tertinggi dalam 3
+          klasifikasi mobil performa ini. Namun istilah hypercar banyak
+          disalahartikan sebagai jenis mobil yang sama dengan supercar. Itulah
+          mengapa banyak orang yang menanyakan apa perbedaan supercar vs
+          hypercar.
+          <br />Hypercar adalah jenis mobil pada level teratas untuk semua
+          kategori, seperti performa, inovasi, desain, teknologi dan tentunya
+          harga. Dapat dikatakan untuk komponen-komponen klasifikasi tersebut,
+          hypercar berada pada level ekstrim. Sehingga jumlahnya sangat sedikit
+          di dunia, diperkirakan hanya 1% dari jumlah supercar di seluruh dunia.
+          Oleh karena itu, hypercar hanya dibuat terbatas beberapa unit saja
+          untuk setiap modelnya, bahkan tidak sedikit yang merupakan One-off
+          project, yang artinya hanya ada 1 unit di seluruh dunia.
+          <br />Hypercar memiliki performa sangat tinggi dan desain yang
+          menakjubkan. Sehingga harganya sangat mahal hingga di level tidak
+          masuk akal untuk sebuah kendaraan. Namun ini bukanlah mainan untuk
+          orang yang sekedar sangat kaya, tapi lebih dari itu merupakan
+          kendaraan para konglomerat atau pemilik bisnis multinasional atau
+          selebritas internasional yang uang 1 juta dollar hanyalah recehan bagi
+          mereka. Itu pun hanya bagi mereka yang benar-benar menyukai berkendara
+          dengan kecepatantinggi. <br />Hypercar yang terkenal antara lain:
+          Lamborghini Miura, Lamborghini Veneno, Bugatti Chiron SuperSport,
+          Porsche 918, Ferrari LaFerrari, McLaren P1, Pagani Huayra, Lykan
+          HyperSport, Lamborghini Essenza SCV12, SSC Tuatara, Deretan line-up
+          Koenigsegg, Aston Martin Valkyrie, dan lainnya.
+        </p>
 
-          <div class="img1">
-            <img class="mobilsport" src="supercar.jpg" alt="mobilsuper">
-          </div>
-
-          <h3>HYPERCAR</h3>
-
-          <p class="text">
-            Dari sebutan hyper, jelas berarti ini adalah jenis mobil yang lebih tinggi dari supercar. Hypercar adalah kasta tertinggi dalam 3 klasifikasi mobil performa ini. Namun istilah hypercar banyak disalahartikan sebagai jenis mobil yang sama dengan supercar. Itulah mengapa banyak orang yang menanyakan apa perbedaan supercar vs hypercar.
-            <br>Hypercar adalah jenis mobil pada level teratas untuk semua kategori, seperti performa, inovasi, desain, teknologi dan tentunya harga. Dapat dikatakan untuk komponen-komponen klasifikasi tersebut, hypercar berada pada level ekstrim. Sehingga jumlahnya sangat sedikit di dunia, diperkirakan hanya 1% dari jumlah supercar di seluruh dunia. Oleh karena itu, hypercar hanya dibuat terbatas beberapa unit saja untuk setiap modelnya, bahkan tidak sedikit yang merupakan One-off project, yang artinya hanya ada 1 unit di seluruh dunia.
-            <br>Hypercar memiliki performa sangat tinggi dan desain yang menakjubkan. Sehingga harganya sangat mahal hingga di level tidak masuk akal untuk sebuah kendaraan. Namun ini bukanlah mainan untuk orang yang sekedar sangat kaya, tapi lebih dari itu merupakan kendaraan para konglomerat atau pemilik bisnis multinasional atau selebritas internasional yang uang 1 juta dollar hanyalah recehan bagi mereka. Itu pun hanya bagi mereka yang benar-benar menyukai berkendara dengan kecepatantinggi.
-            <br>Hypercar yang terkenal antara lain: Lamborghini Miura, Lamborghini Veneno, Bugatti Chiron SuperSport, Porsche 918, Ferrari LaFerrari, McLaren P1, Pagani Huayra, Lykan HyperSport, Lamborghini Essenza SCV12, SSC Tuatara, Deretan line-up Koenigsegg, Aston Martin Valkyrie, dan lainnya.
-          </p>
-          
-
-          <div class="img1">
-            <img class="mobilsport" src="hypercar.jpg" alt="mobilhyper">
-          </div>
-          <!-- CONTENT SELESAI -->
-          <br>
-          <!-- FOOTER -->
-          <div class="footer">
-            <p class="copy">Copyright 2023. Emmir Fahrezi</p>
-          </div>
+        <div class="img1">
+          <img class="mobilsport" src="hypercar.jpg" alt="mobilhyper" />
         </div>
+        <!-- CONTENT SELESAI -->
+        <br />
+        <!-- FOOTER -->
+        <div class="footer">
+          <p class="copy">Copyright 2023. Emmir Fahrezi</p>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
